2010-05-09 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/setup/file_manager.php: Changed deprecated split() function to
	explode(). Center delete image.

	* modules/manage_network_components.php: Center delete image.

2010-05-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php, include/fgraph.php,
          include/functions_db.php, include/functions_fsgraph.php: Fixed
          a lot of chart and report code related to Pandora FMS's data
          compression algorithm.

2010-05-07 Sergio Martin  <sergio.martin@artica.es>

	* godmode/servers/manage_recontask_form.php: Included
	the help icon into the header for bug: 2997559

2010-05-07  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_prediction_source_module.php: Added a missing
	help file.

2010-05-06 Raúl Mateos <raulofpandora@gmail.com>

	* include/config*.php: Updated year. Updated build.

	* include/functions_*.php: Updated year. Clean Code.

2010-05-06 Miguel de Dios  <miguel.dedios@artica.es>

	* include/config.inc.php: fixed the operation require when the php file to
	call config.php have a file with same name of "config_process.php" ...in
	rare cases.
	
	* include/config_process.php: fixed the operation require when the php file
	to call config.php have a file with same name of "functions.php",
	"functions_db.php", "functions_config.php" ...in rare cases. 
	
	* include/functions.php, include/functions_config.php: cleaned the source
	code.

2010-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/map_builder.php: added the height and width to save in
	the copy.
	Fixes: #2989340

2010-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.php: added the extract size of
	image and save.
	Fixes: #2992401

2010-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php: fixed notices php messages when the
	visual map has the item label (item image without image and only text). 
	